<?xml version="1.0"?>
<package format="2">
  <name>rslidar_sdk</name>
  <version>1.5.0</version>
  <description>The rslidar_sdk package</description>
  <maintainer email="ron.zheng@robosense.cn">robosense</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roslib</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>

  <build_depend>nodelet</build_depend>
  <exec_depend>nodelet</exec_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
  
</package>
